# systemd-monitor

./: Cargo.toml  LICENSE  README.md
src/: main.rs  proxy.rs  systemd.rs
src/proxy/: manager.rs  unit.rs
