[package]
name = "systemd-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["display", "from_str"] }
futures = "0.3.30"
tokio = { version = "1.39.2", features = ["full", "rt"] }
zbus = { version = "4.4.0", features = ["tokio"] }
